# cordova-plugin-litewallet

./: .gitignore  LICENSE  README.md  package.json  plugin.xml
native/android/litewallet-jni/: AndroidManifest.xml
native/android/litewallet-jni/src/com/rust/litewalletjni/: LiteWalletJni.java
native/rust/android/: build.sh  buildopenssl.sh
native/rust/android/src/: lib.rs
native/rust/lib/: Cargo.toml
native/rust/lib/src/: lib.rs
src/android/: LiteWallet.java
www/: litewallet.js
