[package]
name = "rustlib"
version = "1.0.0"
authors = ["Aditya Kulkarni <aditya@zecwallet.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = { version = "0.10.2", default-features = false }
zecwalletlitelib = { git="https://github.com/zerocurrencycoin/zerowallet-light-cli", default-features=false, rev="0e6819f6b962edf9886b43edbed9a2cf60ee14bd" }
lazy_static = "1.4.0"
android_logger = "0.8.6"
log = "0.4.8"
base64 = "0.11.0"
