[package]
name = "rustlib"
version = "1.0.0"
authors = ["Aditya Kulkarni <aditya@zecwallet.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = { version = "0.10.2", default-features = false }
zecwalletlitelib = { git="https://github.com/zerocurrencycoin/zerowallet-light-cli", default-features=false, rev="ca32c63ff42fbbb0f00ea0e388475cd519060f13" }
lazy_static = "1.4.0"
android_logger = "0.8.6"
log = "0.4.8"
base64 = "0.11.0"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
hex = "0.3"
hex-serde = "0.1"

tiny-bip39 = "0.6.2"
rand = "0.7.2"
